2006-04-10  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: Fixed the leak of a GdkGC (Closes N#26116)

2006-04-10  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: Replaced the "Opening layout mode"
	  confirmation not with an animation banner, as required by  UI
	  specifications.

2006-04-07  Johan Bilien <johan.bilien@nokia.com>
	
	* hildon-home/hildon-home-restore-background.sh: Use sh instead of bash,
	  which doesn't exist on the target (Closes N#23524)

2006-04-07  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/layout-manager.c: Reset the applet offset after the
	  layout was cancelled (Closes N#24741)

2006-04-07  Johan Bilien <johan.bilien@nokia.com>

	* libhildonmenu/libhildonmenu.c: Use the memory XML writer instead
	  of the disk one, then write everything at once. This should be
	  faster and hopefully solve the race condition between the TN applet
	  writing to the file while the TN starts reading it. (Closes N#25930)

2006-04-07  Johan Bilien <johan.bilien@nokia.com>

	* Makefile.am, debian/rules: Use maemo-launcher for maemo-af-desktop

2006-04-05  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/home-select-applets-dialog.c: Fixed the leak of a string
	* hildon-home/hildon-home-main.c: Fixed the leak of a g_list

2006-04-05  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-main.c: Populate the Applet Settings submenu
	  even when the menu is triggered from the hardware key

2006-04-05  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-wm-watched-window.c:
	  - hn_wm_watched_window_get_active_view(): Return the first view of
	    an application if no one was set yet (Closes N#22987)
	  - Identation fixes

2006-04-04  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.6.8

2006-04-04  Guillem Jover  <guillem.jover@nokia.com>

	* hildon-navigator/hn-wm.h (MAEMO_LAUNCHER_SIGNAL_IFACE)
	  (MAEMO_LAUNCHER_SIGNAL_PATH, APP_DIED_SIGNAL_NAME): New macros.