@@ -251,15 +251,33 @@ int maemo_af_desktop_main(int argc, char* argv[])
 
     GError *error = NULL;	/* handle errors */
     long fd_flags; 	    /* used to change the pipe into non-blocking mode */
+    gchar *gtkrc = NULL;
 
     setlocale (LC_ALL, "");
 
     bindtextdomain (PACKAGE, LOCALEDIR);
-    
-
     textdomain (PACKAGE);
+    
+    /* Read the maemo-af-desktop gtkrc file */
+    gtkrc = g_build_filename (g_get_home_dir (), 
+                              OSSO_USER_DIR,
+                              MAEMO_AF_DESKTOP_GTKRC,
+                              NULL);
+    
+        g_debug( "CHECKING %s", gtkrc);
+    if (gtkrc && g_file_test ((gtkrc), G_FILE_TEST_EXISTS))
+    {
+        g_debug( "ADDING GTKRC FILE");
+        gtk_rc_add_default_file (gtkrc);
+    }
 
-    gtk_init( &argc, &argv );
+    g_free (gtkrc);
+
+    gtk_rc_reparse_all_for_settings (
+            gtk_settings_get_for_screen (gdk_screen_get_default ()),
+            TRUE /* Force even if the files haven't changed */);
+
+    gtk_init (&argc, &argv);
 
     gnome_vfs_init();
 
